--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Nicholas.Braden-Laptop\\.netbeans\\7.0\\build.properties
+user.properties.file=C:\\Users\\Nicholas\\AppData\\Roaming\\NetBeans\\7.3\\build.properties
