--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -63,7 +63,7 @@ jnlp.signed=false
 jnlp.signing=
 jnlp.signing.alias=
 jnlp.signing.keystore=
-main.class=com.LB_Stuff.MCModify
+main.class=com.lb_stuff.mcmodify.MCModify
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
